--- a/_posts/2021-01-26-Competitions.html
+++ b/_posts/2021-01-26-Competitions.html
@@ -9,27 +9,57 @@ useTOC: false
 <div class="horizontal-flex-box">
     <div class="flex-page-card" onClick="window.location.href='#popup1'">
         <h2>USA Computing Olympia (USACO)</h2>
+        <div class="button-box">
+            <div class="main-button" onClick="window.location.href='http://usaco.org/'">官网链接</div>
+            <div class="main-button" onClick="window.location.href='{{ site.baseurl }}/tertiary-pages/2021/01/26/USACO.html'">USACO 解析</div>
+            <div class="main-button" onClick="window.location.href='{{ site.baseurl }}/2021/02/25/USACO-Prep.html'">USACO 备赛指南</div>
+        </div>
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup2'">
         <h2>Canadian Computing Competition</h2>
+        <div class="button-box">
+            <div class="main-button" onClick="window.location.href='https://cccgrader.com/ '">官网链接</div>
+            <div class="main-button" onClick="window.location.href=''">CCC 备赛指南</div>
+        </div>
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup3'">
         <h2>America Computer Science League</h2>
+        <div class="button-box">
+            <div class="main-button" onClick="window.location.href='https://www.acsl.org/'">官网链接</div>
+            <div class="main-button" onClick="window.location.href='{{ site.baseurl }}/tertiary-pages/2021/01/26/ACSL.html'">ACSL 讲义</div>
+            <div class="main-button" onClick="window.location.href=''">ACSL 备赛指南</div>
+        </div>
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup4'">
         <h2>VEX Robotics Competition</h2>
+        <div class="button-box">
+            <div class="main-button" onclick="window.location.href='https://www.vexrobotics.com/'">官网链接</div>
+            <div class="main-button" onclick="window.location.href='/tertiary-pages/2021/02/01/About-Our-VEX-Robotics-Team.html'">团队页面</div>
+        </div>
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup5'">
         <h2>Google Code Jam</h2>
+        <div class="button-box">
+            <div class="main-button" onclick="window.location.href='https://codingcompetitions.withgoogle.com/codejam'">官网链接</div>
+        </div>
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup6'">
         <h2>Google Code In</h2>
+        <div class="button-box">
+            <div class="main-button" onclick="window.location.href='https://codein.withgoogle.com/'">官网链接</div>
+        </div>
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup7'">
         <h2>Leetcode Week Contest</h2>
+        <div class="button-box">
+            <div class="main-button" onclick="window.location.href='https://leetcode-cn.com/'">官网链接</div>
+        </div>
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup8'">
         <h2>Kaggle</h2>
+        <div class="button-box">
+            <div class="main-button" onclick="window.location.href='https://www.kaggle.com/'">官网链接</div>
+        </div>
     </div>
 </div>
 
