--- a/404.html
+++ b/404.html
@@ -13,13 +13,13 @@ title: 404 Error
         你好像来到了奇怪的地方……
 
         <div class="card-box">
-        <div class="card" onclick="window.location.href='{{ site.baseurl }}/'">
+        <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/'">
             <img src="{{ site.baseurl }}/assets/home.svg" 
                 height="50px" 
             />
             <p>回到主页</p>
         </div>
-        <div class="card" onclick="window.history.back();">
+        <div class="flex-page-card" onclick="window.history.back();">
             <img src="{{ site.baseurl }}/assets/back.svg"
                 height="50px"
             />
