Add new wrapper class no-decoration

--- a/_posts/misc/2021-05-30-Site-Management.html
+++ b/_posts/misc/2021-05-30-Site-Management.html
@@ -17,6 +17,18 @@ title: 网页维护与建设中心
         <div class="flex-page-card" onclick="window.location.href='https://stats.uptimerobot.com/q8nOZiOBNM'">
             <h2>网站运行状态统计</h2>
         </div>
+        <div class="no-decoration">
+            <script src='https://gitee.com/gwcompsci/gwcompsci/widget_preview' async defer></script>
+            <div id="osc-gitee-widget-tag"></div>
+            <style>
+            .osc_pro_color {color: #4183c4 !important;}
+            .osc_panel_color {background-color: #ffffff !important;}
+            .osc_background_color {background-color: #ffffff !important;}
+            .osc_border_color {border-color: #e3e9ed !important;}
+            .osc_desc_color {color: #666666 !important;}
+            .osc_link_color * {color: #9b9b9b !important;}
+            </style>
+        </div>
     </div>
     <div style="height: 15rem;"></div>
 </div>
