Site Thirdparty Maintainance Documentation

--- a/_posts/misc/2021-05-30-Site-Management.html
+++ b/_posts/misc/2021-05-30-Site-Management.html
@@ -5,29 +5,28 @@ Author: Mark
 useTOC: false
 title: 网页维护与建设中心
 ---
-
+<div class="no-decoration" style = "margin-bottom: 2rem;">
+    <script src='https://gitee.com/gwcompsci/gwcompsci/widget_preview' async defer></script>
+    <div id="osc-gitee-widget-tag"></div>
+    <style>
+    .osc_pro_color {color: #4183c4 !important;}
+    .osc_panel_color {background-color: #ffffff !important;}
+    .osc_background_color {background-color: #ffffff !important;}
+    .osc_border_color {border-color: #e3e9ed !important;}
+    .osc_desc_color {color: #666666 !important;}
+    .osc_link_color * {color: #9b9b9b !important;}
+    </style>
+</div>
 <div style="background: url('../../../assets/maintain.svg') no-repeat right bottom;">
     <div class="horizontal-flex-box">
         <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/03/08/Webpage-Documentation.html'">
             <h2>网站技术文档 - Jekyll 篇</h2>
         </div>
-        <div class="flex-page-card" onclick="window.location.href=''">
+        <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/06/03/Third-Party-Maintainance.html'">
             <h2>网站技术文档 - 第三方服务篇</h2>
         </div>
         <div class="flex-page-card" onclick="window.location.href='https://stats.uptimerobot.com/q8nOZiOBNM'">
             <h2>网站运行状态统计</h2>
-        </div>
-        <div class="no-decoration">
-            <script src='https://gitee.com/gwcompsci/gwcompsci/widget_preview' async defer></script>
-            <div id="osc-gitee-widget-tag"></div>
-            <style>
-            .osc_pro_color {color: #4183c4 !important;}
-            .osc_panel_color {background-color: #ffffff !important;}
-            .osc_background_color {background-color: #ffffff !important;}
-            .osc_border_color {border-color: #e3e9ed !important;}
-            .osc_desc_color {color: #666666 !important;}
-            .osc_link_color * {color: #9b9b9b !important;}
-            </style>
         </div>
     </div>
     <div style="height: 15rem;"></div>
