尝试做了点动画效果，但是给link用比较合适，因为采用的是旋转加mask的动画效果，因此需要在html中加入对应的配合，详情可以看注释

--- a/_posts/2021-01-26-Competitions.html
+++ b/_posts/2021-01-26-Competitions.html
@@ -89,7 +89,20 @@ useTOC: false
 
         <blockquote>一般来说 US Open 的难度最高，晋级难度最大。</blockquote>
     </section>
-    <a class="popup__close" href="#">X</a>
+    <a class="link" href="#"><span class="mask">
+        <div class="link-container">
+          <span class="link-title1 title">back</span>
+          <span class="link-title2 title">back</span>
+        </div>
+      </span>
+      <div class="link-icon">
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+      </div></a>
 </div>
 </div>
 
@@ -109,7 +122,20 @@ useTOC: false
         <p><b>建议</b>：</p>
         <p>我们建议高一学生报名 Junior Division，个别高一 USACO 就银组的人推荐报名 Senior Division。高二统一报名 Senior Division。</p>
     </section>
-    <a class="popup__close" href="#">X</a>
+    <a class="link" href="#"><span class="mask">
+        <div class="link-container">
+          <span class="link-title1 title">back</span>
+          <span class="link-title2 title">back</span>
+        </div>
+      </span>
+      <div class="link-icon">
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+      </div></a>
 </div>
 </div>
 
@@ -136,7 +162,20 @@ useTOC: false
             <p>一年只有一个赛季，每个赛季有4个contest。分布在十二月到次年4月。</p>
             <p>具体时间见官网 Schedule <a href="https://www.acsl.org/get-started/schedule">官网ACSL Schedule</a></p>
         </section>
-        <a class="popup__close" href="#">X</a>
+        <a class="link" href="#"><span class="mask">
+        <div class="link-container">
+          <span class="link-title1 title">back</span>
+          <span class="link-title2 title">back</span>
+        </div>
+      </span>
+      <div class="link-icon">
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+      </div></a>
     </div>
 </div>
 
@@ -170,7 +209,20 @@ useTOC: false
             <p><strong>时间</strong></p>
             <p>具体的时间每年会有不同。赛季以一年为季度，通常为下半年到第二年上半年为一个赛季。</p>
         </section>
-        <a class="popup__close" href="#">X</a>
+        <a class="link" href="#"><span class="mask">
+        <div class="link-container">
+          <span class="link-title1 title">back</span>
+          <span class="link-title2 title">back</span>
+        </div>
+      </span>
+      <div class="link-icon">
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+      </div></a>
     </div>
 </div>
 
@@ -187,7 +239,20 @@ useTOC: false
             <p><strong>建议</strong></p>
             <p>USACO 银组及以上的选手可以试着参加Google Code Jam，一般可以通过前三轮</p>
         </section>
-        <a class="popup__close" href="#">X</a>
+        <a class="link" href="#"><span class="mask">
+        <div class="link-container">
+          <span class="link-title1 title">back</span>
+          <span class="link-title2 title">back</span>
+        </div>
+      </span>
+      <div class="link-icon">
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+      </div></a>
     </div>
 </div>
 
@@ -203,7 +268,20 @@ useTOC: false
             <p><strong>建议</strong></p>
             <p>这个比赛与其他CS编程竞赛不太一样，这个竞赛更多的是看你对开源社区的贡献。通过参加这个比赛，可以体验向开源社区做贡献的感觉，同时学习如何使用 Git 等程序员常用的版本管理软件。也可以用来向大学证明自己是一个喜欢对 Community 做贡献的人</p>
         </section>
-        <a class="popup__close" href="#">X</a>
+        <a class="link" href="#"><span class="mask">
+        <div class="link-container">
+          <span class="link-title1 title">back</span>
+          <span class="link-title2 title">back</span>
+        </div>
+      </span>
+      <div class="link-icon">
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+      </div></a>
     </div>
 </div>
 
@@ -216,7 +294,20 @@ useTOC: false
             </div>
             <p>leetcode 是一个CS的社区网站，想要练习编程题的同学可以注册账号。网站上可以根据知识点查找题目，针对性练习算法。leetcode会有周赛，双周赛，月赛之类的各种小比赛，可以用来练习。（如果你打的够多也可以去兑换免费T恤哦）</p>
         </section>
-        <a class="popup__close" href="#">X</a>
+        <a class="link" href="#"><span class="mask">
+        <div class="link-container">
+          <span class="link-title1 title">back</span>
+          <span class="link-title2 title">back</span>
+        </div>
+      </span>
+      <div class="link-icon">
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+      </div></a>
     </div>
 </div>
 
@@ -230,6 +321,19 @@ useTOC: false
             </div>
             <p>Kaggle 是一个跟机器学习有关的网站，对数据科学和机器学习有兴趣的同学可以多看看。网站会举办很多机器学习竞赛，也提供大量各种各样的数据集。</p>
         </section>
-        <a class="popup__close" href="#">X</a>
+        <a class="link" href="#"><span class="mask">
+        <div class="link-container">
+          <span class="link-title1 title">back</span>
+          <span class="link-title2 title">back</span>
+        </div>
+      </span>
+      <div class="link-icon">
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
+        </svg>
+      </div></a>
     </div>
 </div>
