General Fixing & Improvement

--- a/_posts/2021-01-26-Competitions.html
+++ b/_posts/2021-01-26-Competitions.html
@@ -39,27 +39,15 @@ useTOC: false
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup5'">
         <h2>Google Code Jam</h2>
-        <div class="button-box">
-            <div class="main-button" onclick="window.location.href='https://codingcompetitions.withgoogle.com/codejam'">官网链接</div>
-        </div>
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup6'">
-        <h2>Google Code In</h2>
-        <div class="button-box">
-            <div class="main-button" onclick="window.location.href='https://codein.withgoogle.com/'">官网链接</div>
-        </div>
+        <h2>CodeForce Week Contest</h2>
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup7'">
         <h2>Leetcode Week Contest</h2>
-        <div class="button-box">
-            <div class="main-button" onclick="window.location.href='https://leetcode-cn.com/'">官网链接</div>
-        </div>
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup8'">
         <h2>Kaggle</h2>
-        <div class="button-box">
-            <div class="main-button" onclick="window.location.href='https://www.kaggle.com/'">官网链接</div>
-        </div>
     </div>
 </div>
 
@@ -89,20 +77,7 @@ useTOC: false
 
         <blockquote>一般来说 US Open 的难度最高，晋级难度最大。</blockquote>
     </section>
-    <a class="link" href="#"><span class="mask">
-        <div class="link-container">
-          <span class="link-title1 title">back</span>
-          <span class="link-title2 title">back</span>
-        </div>
-      </span>
-      <div class="link-icon">
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-      </div></a>
+{% include component/fancy-back.html %}
 </div>
 </div>
 
@@ -122,20 +97,7 @@ useTOC: false
         <p><b>建议</b>：</p>
         <p>我们建议高一学生报名 Junior Division，个别高一 USACO 就银组的人推荐报名 Senior Division。高二统一报名 Senior Division。</p>
     </section>
-    <a class="link" href="#"><span class="mask">
-        <div class="link-container">
-          <span class="link-title1 title">back</span>
-          <span class="link-title2 title">back</span>
-        </div>
-      </span>
-      <div class="link-icon">
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-      </div></a>
+    {% include component/fancy-back.html %}
 </div>
 </div>
 
@@ -162,20 +124,7 @@ useTOC: false
             <p>一年只有一个赛季，每个赛季有4个contest。分布在十二月到次年4月。</p>
             <p>具体时间见官网 Schedule <a href="https://www.acsl.org/get-started/schedule">官网ACSL Schedule</a></p>
         </section>
-        <a class="link" href="#"><span class="mask">
-        <div class="link-container">
-          <span class="link-title1 title">back</span>
-          <span class="link-title2 title">back</span>
-        </div>
-      </span>
-      <div class="link-icon">
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-      </div></a>
+        {% include component/fancy-back.html %}
     </div>
 </div>
 
@@ -209,20 +158,7 @@ useTOC: false
             <p><strong>时间</strong></p>
             <p>具体的时间每年会有不同。赛季以一年为季度，通常为下半年到第二年上半年为一个赛季。</p>
         </section>
-        <a class="link" href="#"><span class="mask">
-        <div class="link-container">
-          <span class="link-title1 title">back</span>
-          <span class="link-title2 title">back</span>
-        </div>
-      </span>
-      <div class="link-icon">
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-      </div></a>
+        {% include component/fancy-back.html %}
     </div>
 </div>
 
@@ -239,49 +175,19 @@ useTOC: false
             <p><strong>建议</strong></p>
             <p>USACO 银组及以上的选手可以试着参加Google Code Jam，一般可以通过前三轮</p>
         </section>
-        <a class="link" href="#"><span class="mask">
-        <div class="link-container">
-          <span class="link-title1 title">back</span>
-          <span class="link-title2 title">back</span>
-        </div>
-      </span>
-      <div class="link-icon">
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-      </div></a>
+        {% include component/fancy-back.html %}
     </div>
 </div>
 
 <div class="popup" id="popup6">
     <div class="popup-inner">
         <section class="main-content">
-            <h2 id="google-code-in"><strong>Google Code In</strong></h2>
+            <h2 id="google-code-in"><strong>CodeForce Week Contest</strong></h2>
             <div class="button-box">
-                    <div class="main-button" onclick="window.location.href='https://codein.withgoogle.com/'">官网链接</div>
+                    <div class="main-button" onclick="window.location.href='https://codeforces.com/'">官网链接</div>
             </div>
-            <p><strong>比赛机制</strong></p>
-            <p>Google code in 是一个由Google主办的比赛。比赛方会指定一些开源社区，在参赛选手（13-17岁）需要帮这些社区做任务获取积分，以积分排名。</p>
-            <p><strong>建议</strong></p>
-            <p>这个比赛与其他CS编程竞赛不太一样，这个竞赛更多的是看你对开源社区的贡献。通过参加这个比赛，可以体验向开源社区做贡献的感觉，同时学习如何使用 Git 等程序员常用的版本管理软件。也可以用来向大学证明自己是一个喜欢对 Community 做贡献的人</p>
         </section>
-        <a class="link" href="#"><span class="mask">
-        <div class="link-container">
-          <span class="link-title1 title">back</span>
-          <span class="link-title2 title">back</span>
-        </div>
-      </span>
-      <div class="link-icon">
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-      </div></a>
+        {% include component/fancy-back.html %}
     </div>
 </div>
 
@@ -294,20 +200,7 @@ useTOC: false
             </div>
             <p>leetcode 是一个CS的社区网站，想要练习编程题的同学可以注册账号。网站上可以根据知识点查找题目，针对性练习算法。leetcode会有周赛，双周赛，月赛之类的各种小比赛，可以用来练习。（如果你打的够多也可以去兑换免费T恤哦）</p>
         </section>
-        <a class="link" href="#"><span class="mask">
-        <div class="link-container">
-          <span class="link-title1 title">back</span>
-          <span class="link-title2 title">back</span>
-        </div>
-      </span>
-      <div class="link-icon">
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-      </div></a>
+        {% include component/fancy-back.html %}
     </div>
 </div>
 
@@ -321,19 +214,6 @@ useTOC: false
             </div>
             <p>Kaggle 是一个跟机器学习有关的网站，对数据科学和机器学习有兴趣的同学可以多看看。网站会举办很多机器学习竞赛，也提供大量各种各样的数据集。</p>
         </section>
-        <a class="link" href="#"><span class="mask">
-        <div class="link-container">
-          <span class="link-title1 title">back</span>
-          <span class="link-title2 title">back</span>
-        </div>
-      </span>
-      <div class="link-icon">
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-        <svg class="icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M21.883 12l-7.527 6.235.644.765 9-7.521-9-7.479-.645.764 7.529 6.236h-21.884v1h21.883z" />
-        </svg>
-      </div></a>
+        {% include component/fancy-back.html %}
     </div>
 </div>
