Some minor update on CSS

--- a/404.html
+++ b/404.html
@@ -17,13 +17,13 @@ title: 404 Error
             <img src="{{ site.baseurl }}/assets/home.svg" 
                 height="50px" 
             />
-            <p>回到主页</p>
+            <center><p>回到主页</p></center>
         </div>
         <div class="flex-page-card" onclick="window.history.back();">
             <img src="{{ site.baseurl }}/assets/back.svg"
                 height="50px"
             />
-            <p>回到上一页</p>
+            <center><p>回到上一页</p></center>
         </div>
         </div>
     </div>
