Standardize SASS Size controler with rem unit in variable.sass

--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@ title: 404 Error
 
         你好像来到了奇怪的地方……
 
-        <div class="card-box">
+        <div class="horizontal-flex-box">
         <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/'">
             <img src="{{ site.baseurl }}/assets/home.svg" 
                 height="50px" 
