--- a/_posts/2021-01-26-Competitions.html
+++ b/_posts/2021-01-26-Competitions.html
@@ -12,21 +12,21 @@ useTOC: false
         <p>这里记录了{% for contest in site.data.analysis-setup %}{{contest.ShowName}} {% endfor %} 的打卡文件，如果你有题目不会做可以参考一些之前同学的打卡哦！我们也欢迎你将自己的打卡分享给我们，成为网站的贡献者之一😊</p>
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup1'">
-        <h2>USA Computing Olympia (USACO)</h2>
+        <h2>USACO</h2>
         <div class="button-box">
             <div class="main-button" onClick="window.location.href='http://usaco.org/'">官网链接</div>
             <div class="main-button" onClick="window.location.href='{{ site.baseurl }}/2021/02/25/USACO-Prep.html'">USACO 备赛指南</div>
         </div>
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup2'">
-        <h2>Canadian Computing Competition</h2>
+        <h2>CCC</h2>
         <div class="button-box">
             <div class="main-button" onClick="window.location.href='https://cccgrader.com/ '">官网链接</div>
             <div class="main-button" onClick="window.location.href=''">CCC 备赛指南</div>
         </div>
     </div>
     <div class="flex-page-card" onClick="window.location.href='#popup3'">
-        <h2>America Computer Science League</h2>
+        <h2>ACSL</h2>
         <div class="button-box">
             <div class="main-button" onClick="window.location.href='https://www.acsl.org/'">官网链接</div>
             <div class="main-button" onClick="window.location.href='{{ site.baseurl }}/tertiary-pages/2021/01/26/ACSL.html'">ACSL 讲义</div>
