Fix image link, transfer image bed from gitee to tencent cloud CDN

--- a/_posts/notes/2021-03-04-notes.html
+++ b/_posts/notes/2021-03-04-notes.html
@@ -27,7 +27,7 @@ useTOC: false
         <h2>书本分享</h2>
         <div class="horizontal-flex-box">
             <p>这里有 <em>Introduction to Algorithm</em>, <em>Competitive Programming 3</em>, <em>Fluent Python</em>, <em>Artificial Intelligence: a Modern Approach</em>, 和 《神经网络与深度学习》的电子版 pdf。</p>
-            <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210415090909.png" alt="image-20210415090909057" style="height: 30%; width: 30%; margin: 1rem; border-radius: 10px; flex-grow: 1;" />
+            <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210415090909.png" alt="image-20210415090909057" style="height: 30%; width: 30%; margin: 1rem; border-radius: 10px; flex-grow: 1;" />
         </div>
     </div>
 </div>
